# fastapi-book-catalog

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
project/: app.py
project/data/: books.yaml
project/endpoints/: books.py
project/models/: book.py
project/services/: book_loader.py  book_service.py
project/tests/: test_books.py
