[tool.poetry]
package-mode = false

[project]
name = "fastapi-book-catalog"
packages = [{ include = "project" }]
version = "0.1.0"
description = "FastAPI book catalog"
authors = [
    {name = "Manuel",email = "manuel.ferreira@ctw.bmwgroup.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
